--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                     <p class="blog-excerpt">Exploring emerging trends like AI-powered development, WebAssembly, and the evolution of JavaScript frameworks that are shaping the future...</p>
                     <div class="blog-footer">
                         <div class="blog-author">
-                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Ccircle fill='%2300f0ff' cx='20' cy='20' r='20'/%3E%3Ctext x='50%25' y='55%25' font-size='20' fill='white' text-anchor='middle' font-family='Arial'%3E👨‍💻%3C/text%3E%3C/svg%3E" alt="Author">
+                            <img src="assets/Images/Hans UBB.jpg" alt="Author">
                             <span>Hans</span>
                         </div>
                         <a href="#" class="read-more">
@@ -870,7 +870,7 @@
                     <p class="blog-excerpt">Understanding the power of React Hooks and how they revolutionize state management in modern applications with practical examples...</p>
                     <div class="blog-footer">
                         <div class="blog-author">
-                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Ccircle fill='%2300f0ff' cx='20' cy='20' r='20'/%3E%3Ctext x='50%25' y='55%25' font-size='20' fill='white' text-anchor='middle' font-family='Arial'%3E👨‍💻%3C/text%3E%3C/svg%3E" alt="Author">
+                            <img src="assets/Images/Hans UBB.jpg" alt="Author">
                             <span>Hans</span>
                         </div>
                         <a href="#" class="read-more">
@@ -895,7 +895,7 @@
                     <p class="blog-excerpt">How artificial intelligence is transforming the way we build, test, and deploy web applications in 2024 and beyond...</p>
                     <div class="blog-footer">
                         <div class="blog-author">
-                            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Ccircle fill='%2300f0ff' cx='20' cy='20' r='20'/%3E%3Ctext x='50%25' y='55%25' font-size='20' fill='white' text-anchor='middle' font-family='Arial'%3E👨‍💻%3C/text%3E%3C/svg%3E" alt="Author">
+                            <img src="assets/Images/Hans UBB.jpg" alt="Author">
                             <span>Hans</span>
                         </div>
                         <a href="#" class="read-more">
@@ -1116,4 +1116,5 @@
     <script src="./js/script.js"></script>
 
 </body>
+
 </html>
